k8s/production/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delineate-ai-app-production
  namespace: production
  labels:
    app: delineate-ai-app-production
    environment: production
spec:
  selector:
    matchLabels:
      app: delineate-ai-app-production
  template:
    metadata:
      labels:
        app: delineate-ai-app-production
    spec:
      containers:
        - name: delineate-ai-app
          image: IMAGE_PLACEHOLDER
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "4Gi"
              cpu: "1000m"
            limits:
              memory: "4Gi"
              cpu: "1000m"
          volumeMounts:
            - name: data-volume
              mountPath: /code/data
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 30
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: delineate-ai-shared-data-production
      restartPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delineate-ai-default-celery
  namespace: production
  labels:
    app: delineate-ai-default-celery
    environment: production
spec:
  selector:
    matchLabels:
      app: delineate-ai-default-celery
  template:
    metadata:
      labels:
        app: delineate-ai-default-celery
    spec:
      containers:
        - name: default-celery
          image: IMAGE_PLACEHOLDER
          command:
            [
              "celery",
              "-A",
              "app.core.celery.app",
              "worker",
              "-n",
              "default-io-celery@%h",
              "-Q",
              "delineate-ai-queue,dosing-table",
              "--loglevel=INFO",
              "-P",
              "prefork",
              "--concurrency=8",
              "--events",
            ]
          resources:
            requests:
              memory: "1.5Gi"
              cpu: "1500m"
            limits:
              memory: "4Gi"
              cpu: "2000m"
          volumeMounts:
            - name: data-volume
              mountPath: /code/data
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: delineate-ai-shared-data-production
      restartPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delineate-ai-cpu-celery
  namespace: production
  labels:
    app: delineate-ai-cpu-celery
    environment: production
spec:
  selector:
    matchLabels:
      app: delineate-ai-cpu-celery
  template:
    metadata:
      labels:
        app: delineate-ai-cpu-celery
    spec:
      containers:
        - name: cpu-celery
          image: IMAGE_PLACEHOLDER
          command:
            [
              "celery",
              "-A",
              "app.core.celery.app",
              "worker",
              "-n",
              "cpu-celery@%h",
              "-Q",
              "cpu-tasks",
              "--loglevel=INFO",
              "-P",
              "prefork",
              "--concurrency=4",
              "--events",
            ]
          resources:
            requests:
              memory: "1.5Gi"
              cpu: "1500m"
            limits:
              memory: "4Gi"
              cpu: "2000m"
          volumeMounts:
            - name: data-volume
              mountPath: /code/data
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: delineate-ai-shared-data-production
      restartPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delineate-ai-general-extraction-celery
  namespace: production
  labels:
    app: delineate-ai-general-extraction-celery
    environment: production
spec:
  selector:
    matchLabels:
      app: delineate-ai-general-extraction-celery
  template:
    metadata:
      labels:
        app: delineate-ai-general-extraction-celery
    spec:
      containers:
        - name: general-extraction-celery
          image: IMAGE_PLACEHOLDER
          command:
            [
              "celery",
              "-A",
              "app.core.celery.app",
              "worker",
              "-n",
              "general-extraction@%h",
              "-Q",
              "general-extraction",
              "--loglevel=INFO",
              "-P",
              "prefork",
              "--concurrency=8",
              "--events",
            ]
          resources:
            requests:
              memory: "8Gi"
              cpu: "2000m"
            limits:
              memory: "8Gi"
              cpu: "2000m"
          volumeMounts:
            - name: data-volume
              mountPath: /code/data
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: delineate-ai-shared-data-production
      restartPolicy: Always
